# BonniePlantsArduino

./: .gitignore  BOM-PLC Config Mon Feb 02 2026 10_43_39.csv  LICENSE  README.md  platformio.ini
.github/: README.md
Documents/: HMI_SETUP_GUIDE.md
QtVersion/: .gitignore  BuzzerDelay.cpp  CMakeLists.txt  COMPorts.json  CountDownTimer.json  Counter.cpp  Counter.h  DEPLOYMENT_CHECKLIST.md  EStop.cpp  HARDWARE_SPECIFICATIONS.md  HARDWARE_TEST_PLAN.md  ModbusInput.cpp  ModbusInput.h  ModbusOutput.cpp  ModbusOutput.h  MotorCalibFact.json  PRD.md  PRODUCTION_LOGGING_DOCS.md  ProductionLog.cpp  ProductionLog.h  ReadWriteJson.cpp  ReadWriteModbus.cpp  ReadWriteModbus.h  Run1.cpp  Run2.cpp  SAFETY_IMPROVEMENTS_CHANGELOG.md  Stop.cpp  TEST_MODE_DOCUMENTATION.md  TimeDelay.cpp  TrayFactors.json  UpperSoilBeltFactors.json  logviewer.cpp  logviewer.h  logviewer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motor.cpp  motor.h  (+20 more)
include/: Config.h
src/: main.cpp
